# halogen

./: .clangd  .gitignore  CMakeLists.txt  Cargo.toml  flake.nix  release.toml
halogen/: Cargo.toml
halogen-macros/: Cargo.toml
halogen/src/: lib.rs
halogen/src/core/: error.rs  mod.rs
halogen/src/core/ops/elementwise/: mod.rs
halogen/src/core/ops/elementwise/fmap/: ext.rs  mod.rs  ops.rs
halogen/src/core/ops/elementwise/zipwith/: ext.rs  mod.rs  ops.rs
halogen/src/core/tensor/: dense.rs  mod.rs
halogen/src/tests/: mod.rs
include/: absalg.hpp
include/absalg/: absalg.hpp  arithmetic.hpp  structures.hpp  template.hpp  traits.hpp
src/: main.rs
src/core/ops/: mod.rs
src/core/ops/elementwise/: map.rs  map_ops.rs  mod.rs  zipwith.rs  zipwith_ops.rs
src/core/ops/elementwise/fmap/: ext.rs  mod.rs  ops.rs
src/core/ops/elementwise/map/: ext.rs  mod.rs  ops.rs
src/core/ops/elementwise/zipwith/: ext.rs  mod.rs  ops.rs
src/core/ops/linalg/: mod.rs
src/core/tensor/: dense.rs  into.rs  mod.rs  scarlar.rs  tensor_macro.rs
test/: test.cpp
test/archive/: main.cpp
test/archive/Halogen/Core/: Tensor.h  TensorOperation.h
test/archive/tests/: TensorTests.cpp
