[package]
name = "halogen"
version = "0.0.0"
edition = "2024"
description = "tensor library for rust"
license = "MIT"
repository = "https://github.com/xhalogen/halogen"

[dependencies]

[dev-dependencies]
cargo-husky = {version = "1", features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]}

[lib]
proc-macro = true
