[package]
name = "halogen"
version = "0.0.0"
edition = "2024"
description = "tensor library for rust"
license = "MIT"
repository = "https://github.com/xhalogen/halogen"

[dependencies]
halogen-macros = { version = "0.0.0", path = "../halogen-macros" }
thiserror = "2"

[dev-dependencies]
cargo-husky = {version = "1", features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]}
